# graph-theory-rocq

./: .gitignore  CHANGELOG.md  LICENSE-DATA.md  Makefile  README.md  _CoqProject
base/: README.md  _CoqProject  coq-graph-theory-base.opam
base/theories/: asymptotics.v  base.v  complexity.v  finite_graph.v  graph_metric.v  list_flexibility.v  posets.v  surface.v
digraph-theory/: CONTRIBUTING.md  FORMAL_LIBRARY_PLAN.md  Makefile  _CoqProject  coq-digraph-theory.opam  meta.yml  rocq-digraph-theory.opam
digraph-theory/.github/workflows/: ci.yml
digraph-theory/blueprint/: README.md
digraph-theory/blueprint/src/: bp_dictionary.tex  bp_families.tex  bp_general.tex  bp_unified.tex  web.paux
digraph-theory/blueprint/src/macros/: common.tex
digraph-theory/docs/: PLAN_CK3.md  PLAN_K34.md  ck3_dossier.md  dependency_graph.json  digraph_conjecture_ledger.json  k34_dossier.md
digraph-theory/docs/correspondence/: curated.json
digraph-theory/docs/formal/: .gitignore  README.md  digraph_formal.tex  lemma_catalog.tex  preamble.tex
digraph-theory/docs/web/: closure.json  defblocks.json
digraph-theory/docs/web/chapters/: ch_dictionary.tex  ch_families.tex  ch_general.tex  ch_glossary.tex  ch_paths.tex  ch_primer.tex  ch_unified.tex
digraph-theory/docs/web/panels/: AC_kcritical3.tex  AC_vertex_transitive.tex  T4_kcritical4.tex  T5_kcritical5.tex  card_AC.tex  card_T4.tex  card_T5.tex  ck_conj1_delta3_path.tex  ck_theorem4_oriented.tex  domnum_le_omegabar.tex  kcritical2_uniq.tex  no_short_strong3.tex  omegabar_AC.tex  omegabar_AC_del.tex  omegabar_T4.tex  omegabar_T4_del.tex  omegabar_T5.tex  omegabar_T5_del.tex  omegabar_del_vt.tex  omegabar_lexprod_ge.tex  omegabar_transb.tex  question_5_9_fails_at_k5.tex  vt_kcritical.tex
digraph-theory/docs/web/quotes/: block_AC.code  block_AC.tex  block_C3.code  block_C3.tex  block_arc.tex  block_aut.tex  block_backedge.tex  block_cayley.tex  block_dgiso.code  block_dgiso.tex  block_dipath.code  block_dipath.tex  block_domination.code  block_domination.tex  block_ell.code  block_ell.tex  (+69 more)
digraph-theory/paper/: ck3_excerpts.md  k5_theorem.tex
digraph-theory/scripts/: axiom_audit.py  ck3_oracle.py  constructions.py  core.py  extract_catalog.py  gen_blueprint.py  gen_panels.py  k4_oracle.py  oracle.py  statement_closure.py  test_ck3_oracle.py  test_correspondence.py  test_k4_oracle.py  test_oracle.py  test_statement_closure.py
digraph-theory/site/: dependency_graph.html
digraph-theory/theories/: README.md
digraph-theory/theories/applications/: acn_bands.v  unified.v
digraph-theory/theories/conjectures/: P9.v  P9_AUDIT_NOTES.md  X1.v  X107.v  X122.v  X123.v  X136.v  X16.v  X166.v  X17.v  X179.v  X19.v  X193.v  X2.v  X44.v  X45.v  X46.v  X51.v  X52.v  X53.v  X54.v  X71.v  X79.v  X86.v  X90.v  X92.v  X93.v  XE2.v  dichromatic.v  external.v  generalised_wheel.v  glue_tree.v  grounding_P9.v  grounding_chi_col.v  grounding_classic_core.v  grounding_colouring2.v  grounding_dichromatic.v  grounding_dichromatic_cycle.v  grounding_edges.v  grounding_falsification_report.v  (+19 more)
digraph-theory/theories/constructions/: automorphism.v  cayley.v  circulant.v  product.v
digraph-theory/theories/core/: digraph.v  order.v  oriented.v  tournament.v
digraph-theory/theories/foundations/: interop_graph_theory.v  prelude.v
digraph-theory/theories/invariants/: critical.v  domination.v  omegabar.v  strong.v
digraph-theory/theories/invariants_advanced/: substitution.v  transitive.v
digraph-theory/web/correspondence/: app.js  index.html
(+512 files in other folders)
