opam-version: "2.0"
name: "coq-digraph-theory"
version: "dev"
maintainer: "Marc Lelarge <marc.lelarge@gmail.com>"
authors: [ "Marc Lelarge" ]
license: "Apache-2.0"
homepage: "https://github.com/LLM4Rocq/digraph-theory"
bug-reports: "https://github.com/LLM4Rocq/digraph-theory/issues"
dev-repo: "git+https://github.com/LLM4Rocq/digraph-theory.git"

synopsis: "Directed graphs and tournaments for MathComp (compatibility wrapper)"
description: """
Compatibility package for rocq-digraph-theory under the legacy `coq-` naming.
Installs exactly the same library; depend on this name if your toolchain still
uses the `coq-` opam packages.
"""

build: [ [ make "-j%{jobs}%" ] ]
install: [ [ make "install" ] ]

depends: [
  "coq-core"                  { >= "8.19"  }
  "coq-mathcomp-ssreflect"    { >= "2.5.0" }
  "coq-mathcomp-algebra"      { >= "2.5.0" }
  "coq-mathcomp-fingroup"     { >= "2.5.0" }
  "coq-mathcomp-classical"    { >= "1.16.0" }
  "coq-hierarchy-builder"     { >= "1.5.0" }
  "coq-graph-theory"          { >= "0.9.7" }
]

tags: [
  "category:Mathematics/Combinatorics and Graph Theory/Graph Theory"
  "keyword:graph theory"
  "keyword:digraph"
  "keyword:tournament"
  "logpath:Digraph"
]
